facet-styx/src/snapshots/facet_styx__schema_error__tests__type_mismatch_diagnostic.snap
---
source: crates/facet-styx/src/schema_error.rs
expression: rendered
---
Error: type mismatch at 'age'
   ╭─[ test.styx:1:5 ]
   │
 1 │ age notanumber
   │     ─────┬────  
   │          ╰────── expected int, got string
───╯
